--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-Flask==2.3.3
-Flask-SocketIO==5.3.6
-python-socketio==5.9.0
-python-engineio==4.7.1
-psycopg2-binary==2.9.7
+flask
+requests
+flask_socketio
+gunicorn
